fix(navigation): decrease navigation font size on small devices

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -301,6 +301,9 @@ img.face {
 }
 
 @media (max-width: 400px)  {
+	nav li {
+		font-size: 0.8em;
+	}
 	.ymom-video {
 		width: 260px;
 		height: 145px;
